cmake_minimum_required(VERSION 3.12)
project(Xorion)

set(CMAKE_CXX_STANDARD 17)

if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
    add_compile_options(-Wno-dynamic-class-memaccess -Wno-microsoft-goto -Wno-delete-incomplete /EHsc /Ob1)
elseif (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
    add_compile_options(/MP /Ob1)
endif()

add_compile_definitions(WIN32_LEAN_AND_MEAN)
add_compile_definitions(NOMINMAX)
if(CMAKE_BUILD_TYPE MATCHES Release)

elseif(CMAKE_BUILD_TYPE MATCHES BetaConf)
    add_compile_definitions(_BETA)
endif()

include_directories(.)
include_directories(include)
include_directories(include/glm/)

link_directories(minhook)

add_library(Xorion SHARED
        Xorion/Command/Commands/BindCommand.cpp
        Xorion/Command/Commands/BindCommand.h
        Xorion/Command/Commands/BruhCommand.cpp
        Xorion/Command/Commands/BruhCommand.h
        Xorion/Command/Commands/CommandBlockExploitCommand.cpp
        Xorion/Command/Commands/CommandBlockExploitCommand.h
        Xorion/Command/Commands/ConfigCommand.cpp
        Xorion/Command/Commands/ConfigCommand.h
        Xorion/Command/Commands/CoordsCommand.cpp
        Xorion/Command/Commands/CoordsCommand.h
        Xorion/Command/Commands/DamageCommand.cpp
        Xorion/Command/Commands/DamageCommand.h
        Xorion/Command/Commands/DeviceIDCommand.cpp
        Xorion/Command/Commands/DeviceIDCommand.h
        Xorion/Command/Commands/DupeCommand.cpp
        Xorion/Command/Commands/DupeCommand.h
        Xorion/Command/Commands/EjectCommand.cpp
        Xorion/Command/Commands/EjectCommand.h
        Xorion/Command/Commands/EnchantCommand.cpp
        Xorion/Command/Commands/EnchantCommand.h
        Xorion/Command/Commands/ExecuteCommand.cpp
        Xorion/Command/Commands/ExecuteCommand.h
        Xorion/Command/Commands/ForceOpCommand.cpp
        Xorion/Command/Commands/ForceOpCommand.h
        Xorion/Command/Commands/FriendListCommand.cpp
        Xorion/Command/Commands/FriendListCommand.h
        Xorion/Command/Commands/GameModeCommand.cpp
        Xorion/Command/Commands/GameModeCommand.h
        Xorion/Command/Commands/GiveCommand.cpp
        Xorion/Command/Commands/GiveCommand.h
        Xorion/Command/Commands/HelpCommand.cpp
        Xorion/Command/Commands/HelpCommand.h
        Xorion/Command/Commands/HideCommand.cpp
        Xorion/Command/Commands/HideCommand.h
        Xorion/Command/Commands/ICommand.cpp
        Xorion/Command/Commands/ICommand.h
        Xorion/Command/Commands/ModulesCommand.cpp
        Xorion/Command/Commands/ModulesCommand.h
        Xorion/Command/Commands/NameSpoofCommand.cpp
        Xorion/Command/Commands/NameSpoofCommand.h
        Xorion/Command/Commands/NbtCommand.cpp
        Xorion/Command/Commands/NbtCommand.h
        Xorion/Command/Commands/PanicCommand.cpp
        Xorion/Command/Commands/PanicCommand.h
        Xorion/Command/Commands/PathCommand.cpp
        Xorion/Command/Commands/PathCommand.h
        Xorion/Command/Commands/PlayerTeleportCommand.cpp
        Xorion/Command/Commands/PlayerTeleportCommand.h
        Xorion/Command/Commands/RelativeTeleportCommand.cpp
        Xorion/Command/Commands/RelativeTeleportCommand.h
        Xorion/Command/Commands/RenameCommand.cpp
        Xorion/Command/Commands/RenameCommand.h
        Xorion/Command/Commands/RepairCommand.cpp
        Xorion/Command/Commands/RepairCommand.h
        Xorion/Command/Commands/SayCommand.cpp
        Xorion/Command/Commands/SayCommand.h
        Xorion/Command/Commands/ScriptCommand.cpp
        Xorion/Command/Commands/ScriptCommand.h
        Xorion/Command/Commands/SeedCommand.cpp
        Xorion/Command/Commands/SeedCommand.h
        Xorion/Command/Commands/ServerCommand.cpp
        Xorion/Command/Commands/ServerCommand.h
        Xorion/Command/Commands/SetLoreCommand.cpp
        Xorion/Command/Commands/SetLoreCommand.h
        Xorion/Command/Commands/SetOffhandCommand.cpp
        Xorion/Command/Commands/SetOffhandCommand.h
        Xorion/Command/Commands/SetPrefixCommand.cpp
        Xorion/Command/Commands/SetPrefixCommand.h
        Xorion/Command/Commands/SpammerCommand.cpp
        Xorion/Command/Commands/SpammerCommand.h
        Xorion/Command/Commands/TeleportCommand.cpp
        Xorion/Command/Commands/TeleportCommand.h
        Xorion/Command/Commands/TestCommand.cpp
        Xorion/Command/Commands/TestCommand.h
        Xorion/Command/Commands/ToggleCommand.cpp
        Xorion/Command/Commands/ToggleCommand.h
        Xorion/Command/Commands/TopCommand.cpp
        Xorion/Command/Commands/TopCommand.h
        Xorion/Command/Commands/UnbindCommand.cpp
        Xorion/Command/Commands/UnbindCommand.h
        Xorion/Command/Commands/WaypointCommand.cpp
        Xorion/Command/Commands/WaypointCommand.h
        Xorion/Command/Commands/XpCommand.cpp
        Xorion/Command/Commands/XpCommand.h
        Xorion/Command/CommandMgr.cpp
        Xorion/Command/CommandMgr.h
        Xorion/Config/AccountInformation.cpp
        Xorion/Config/AccountInformation.h
        Xorion/Config/ConfigManager.cpp
        Xorion/Config/ConfigManager.h
        Xorion/FriendList/FriendList.cpp
        Xorion/FriendList/FriendList.h
        Xorion/FriendList/FriendsManager.cpp
        Xorion/FriendList/FriendsManager.h
        Xorion/Menu/ClickGui.cpp
        Xorion/Menu/ClickGui.h
        Xorion/Menu/TabGui.cpp
        Xorion/Menu/TabGui.h
        Xorion/Module/Modules/Aimbot.cpp
        Xorion/Module/Modules/Aimbot.h
        Xorion/Module/Modules/AirJump.cpp
        Xorion/Module/Modules/AirJump.h
        Xorion/Module/Modules/AirStuck.cpp
        Xorion/Module/Modules/AirStuck.h
        Xorion/Module/Modules/AirSwim.cpp
        Xorion/Module/Modules/AirSwim.h
        Xorion/Module/Modules/AntiBot.cpp
        Xorion/Module/Modules/AntiBot.h
        Xorion/Module/Modules/AntiCrystal.cpp
        Xorion/Module/Modules/AntiCrystal.h
        Xorion/Module/Modules/AntiEffect.cpp
        Xorion/Module/Modules/AntiEffect.h
        Xorion/Module/Modules/AntiVoid.cpp
        Xorion/Module/Modules/AntiVoid.h
        Xorion/Module/Modules/AutoArmor.cpp
        Xorion/Module/Modules/AutoArmor.h
        Xorion/Module/Modules/AutoClicker.cpp
        Xorion/Module/Modules/AutoClicker.h
        Xorion/Module/Modules/AutoGapple.cpp
        Xorion/Module/Modules/AutoGapple.h
        Xorion/Module/Modules/AutoSneak.cpp
        Xorion/Module/Modules/AutoSneak.h
        Xorion/Module/Modules/AutoSprint.cpp
        Xorion/Module/Modules/AutoSprint.h
        Xorion/Module/Modules/AutoTotem.cpp
        Xorion/Module/Modules/AutoTotem.h
        Xorion/Module/Modules/Bhop.cpp
        Xorion/Module/Modules/Bhop.h
        Xorion/Module/Modules/Blink.cpp
        Xorion/Module/Modules/Blink.h
        Xorion/Module/Modules/BowAimbot.cpp
        Xorion/Module/Modules/BowAimbot.h
        Xorion/Module/Modules/Breadcrumbs.cpp
        Xorion/Module/Modules/Breadcrumbs.h
        Xorion/Module/Modules/Breaker.cpp
        Xorion/Module/Modules/Breaker.h
        Xorion/Module/Modules/ChestAura.cpp
        Xorion/Module/Modules/ChestAura.h
        Xorion/Module/Modules/ChestESP.cpp
        Xorion/Module/Modules/ChestESP.h
        Xorion/Module/Modules/ChestStealer.cpp
        Xorion/Module/Modules/ChestStealer.h
        Xorion/Module/Modules/ClickGuiMod.cpp
        Xorion/Module/Modules/ClickGuiMod.h
        Xorion/Module/Modules/Crasher.cpp
        Xorion/Module/Modules/Crasher.h
        Xorion/Module/Modules/CrystalAura.cpp
        Xorion/Module/Modules/CrystalAura.h
        Xorion/Module/Modules/CubeGlide.cpp
        Xorion/Module/Modules/CubeGlide.h
        Xorion/Module/Modules/Derp.cpp
        Xorion/Module/Modules/Derp.h
        Xorion/Module/Modules/Dicker.cpp
        Xorion/Module/Modules/Dicker.h
        Xorion/Module/Modules/DVDLogo.cpp
        Xorion/Module/Modules/DVDLogo.h
        Xorion/Module/Modules/EditionFaker.cpp
        Xorion/Module/Modules/EditionFaker.h
        Xorion/Module/Modules/ESP.cpp
        Xorion/Module/Modules/ESP.h
        Xorion/Module/Modules/FastEat.cpp
        Xorion/Module/Modules/FastEat.h
        Xorion/Module/Modules/FastLadder.cpp
        Xorion/Module/Modules/FastLadder.h
        Xorion/Module/Modules/FeetPlace.cpp
        Xorion/Module/Modules/FeetPlace.h
        Xorion/Module/Modules/Fly.cpp
        Xorion/Module/Modules/Fly.h
        Xorion/Module/Modules/Freecam.cpp
        Xorion/Module/Modules/Freecam.h
        Xorion/Module/Modules/Freelook.cpp
        Xorion/Module/Modules/Freelook.h
        Xorion/Module/Modules/Fucker.cpp
        Xorion/Module/Modules/Fucker.h
        Xorion/Module/Modules/FullBright.cpp
        Xorion/Module/Modules/FullBright.h
        Xorion/Module/Modules/FullAuto.cpp
        Xorion/Module/Modules/FullAuto.h
        Xorion/Module/Modules/Glide.cpp
        Xorion/Module/Modules/Glide.h
        Xorion/Module/Modules/Godmode.cpp
        Xorion/Module/Modules/Godmode.h
        Xorion/Module/Modules/HighJump.cpp
        Xorion/Module/Modules/HighJump.h
        Xorion/Module/Modules/Hitbox.cpp
        Xorion/Module/Modules/Hitbox.h
        Xorion/Module/Modules/HudEditor.cpp
        Xorion/Module/Modules/HudEditor.h
        Xorion/Module/Modules/HudModule.cpp
        Xorion/Module/Modules/HudModule.h
        Xorion/Module/Modules/InfiniteAura.cpp
        Xorion/Module/Modules/InfiniteAura.h
        Xorion/Module/Modules/InfiniteTreasureAura.cpp
        Xorion/Module/Modules/InfiniteTreasureAura.h
        Xorion/Module/Modules/InstaBreak.cpp
        Xorion/Module/Modules/InstaBreak.h
        Xorion/Module/Modules/InventoryCleaner.cpp
        Xorion/Module/Modules/InventoryCleaner.h
        Xorion/Module/Modules/InventoryMove.cpp
        Xorion/Module/Modules/InventoryMove.h
        Xorion/Module/Modules/InventoryViewer.cpp
        Xorion/Module/Modules/InventoryViewer.h
        Xorion/Module/Modules/JavascriptModule.cpp
        Xorion/Module/Modules/JavascriptModule.h
        Xorion/Module/Modules/Jesus.cpp
        Xorion/Module/Modules/Jesus.h
        Xorion/Module/Modules/Jetpack.cpp
        Xorion/Module/Modules/Jetpack.h
        Xorion/Module/Modules/Killaura.cpp
        Xorion/Module/Modules/Killaura.h
        Xorion/Module/Modules/LigmaNuts.cpp
        Xorion/Module/Modules/LigmaNuts.h
        Xorion/Module/Modules/MaceHit.cpp
        Xorion/Module/Modules/MaceHit.h
        Xorion/Module/Modules/MidClick.cpp
        Xorion/Module/Modules/MidClick.h
        Xorion/Module/Modules/Module.cpp
        Xorion/Module/Modules/Module.h
        Xorion/Module/Modules/NameTags.cpp
        Xorion/Module/Modules/NameTags.h
        Xorion/Module/Modules/Nbt.cpp
        Xorion/Module/Modules/Nbt.h
        Xorion/Module/Modules/NightMode.cpp
        Xorion/Module/Modules/NightMode.h
        Xorion/Module/Modules/NoClip.cpp
        Xorion/Module/Modules/NoClip.h
        Xorion/Module/Modules/NoFall.cpp
        Xorion/Module/Modules/NoFall.h
        Xorion/Module/Modules/NoFriends.cpp
        Xorion/Module/Modules/NoFriends.h
        Xorion/Module/Modules/NoBreak.cpp
        Xorion/Module/Modules/NoBreak.h
        Xorion/Module/Modules/NoHurtcam.cpp
        Xorion/Module/Modules/NoHurtcam.h
        Xorion/Module/Modules/NoPacket.cpp
        Xorion/Module/Modules/NoPacket.h
        Xorion/Module/Modules/NoPaintingCrash.cpp
        Xorion/Module/Modules/NoPaintingCrash.h
        Xorion/Module/Modules/NoRender.cpp
        Xorion/Module/Modules/NoRender.h
        Xorion/Module/Modules/NoSlowDown.cpp
        Xorion/Module/Modules/NoSlowDown.h
        Xorion/Module/Modules/NoSwing.cpp
        Xorion/Module/Modules/NoSwing.h
        Xorion/Module/Modules/NoWeb.cpp
        Xorion/Module/Modules/NoWeb.h
        Xorion/Module/Modules/Notifications.cpp
        Xorion/Module/Modules/Notifications.h
        Xorion/Module/Modules/Nuker.cpp
        Xorion/Module/Modules/Nuker.h
        Xorion/Module/Modules/PacketLogger.cpp
        Xorion/Module/Modules/PacketLogger.h
        Xorion/Module/Modules/Phase.cpp
        Xorion/Module/Modules/Phase.h
        Xorion/Module/Modules/RainbowSky.cpp
        Xorion/Module/Modules/RainbowSky.h
        Xorion/Module/Modules/Reach.cpp
        Xorion/Module/Modules/Reach.h
        Xorion/Module/Modules/Scaffold.cpp
        Xorion/Module/Modules/Scaffold.h
        Xorion/Module/Modules/SeeCrystals.cpp
        Xorion/Module/Modules/SeeCrystals.h
        Xorion/Module/Modules/Spammer.cpp
        Xorion/Module/Modules/Spammer.h
        Xorion/Module/Modules/Speed.cpp
        Xorion/Module/Modules/Speed.h
        Xorion/Module/Modules/StackableItem.cpp
        Xorion/Module/Modules/StackableItem.h
        Xorion/Module/Modules/Step.cpp
        Xorion/Module/Modules/Step.h
        Xorion/Module/Modules/TargetHUD.cpp
        Xorion/Module/Modules/TargetHUD.h
        Xorion/Module/Modules/Teams.cpp
        Xorion/Module/Modules/Teams.h
        Xorion/Module/Modules/Teleport.cpp
        Xorion/Module/Modules/Teleport.h
        Xorion/Module/Modules/TestModule.cpp
        Xorion/Module/Modules/TestModule.h
        Xorion/Module/Modules/Timer.cpp
        Xorion/Module/Modules/Timer.h
        Xorion/Module/Modules/Tower.cpp
        Xorion/Module/Modules/Tower.h
        Xorion/Module/Modules/Tracer.cpp
        Xorion/Module/Modules/Tracer.h
        Xorion/Module/Modules/TriggerBot.cpp
        Xorion/Module/Modules/TriggerBot.h
        Xorion/Module/Modules/Velocity.cpp
        Xorion/Module/Modules/Velocity.h
        Xorion/Module/Modules/Watermark.cpp
        Xorion/Module/Modules/Watermark.h
        Xorion/Module/Modules/Xray.cpp
        Xorion/Module/Modules/Xray.h
        Xorion/Module/Modules/Zoom.cpp
        Xorion/Module/Modules/Zoom.h
        Xorion/Module/Modules/AntiInvis.cpp
        Xorion/Module/Modules/AntiInvis.h
        Xorion/Module/Modules/Arraylist.cpp
        Xorion/Module/Modules/Arraylist.h
        Xorion/Module/Modules/AutoSplitter.cpp
        Xorion/Module/Modules/AutoSplitter.h
        Xorion/Module/Modules/BlockReach.cpp
        Xorion/Module/Modules/BlockReach.h
        Xorion/Module/Modules/ClientTheme.cpp
        Xorion/Module/Modules/ClientTheme.h
        Xorion/Module/Modules/Compass.cpp
        Xorion/Module/Modules/Compass.h
        Xorion/Module/Modules/Criticals.cpp
        Xorion/Module/Modules/Criticals.h
        Xorion/Module/Modules/FontChanger.cpp
        Xorion/Module/Modules/FontChanger.h
        Xorion/Module/Modules/OffhandAllow.cpp
        Xorion/Module/Modules/OffhandAllow.h
        Xorion/Module/Modules/Radar.cpp
        Xorion/Module/Modules/Radar.h
        Xorion/Module/Modules/ReachDisplay.cpp
        Xorion/Module/Modules/ReachDisplay.h
        Xorion/Module/Modules/Reducer.cpp
        Xorion/Module/Modules/Reducer.h
        Xorion/Module/Modules/Spider.cpp
        Xorion/Module/Modules/Spider.h
        Xorion/Module/Modules/ViewModel.cpp
        Xorion/Module/Modules/ViewModel.h
        Xorion/Module/Modules/Waypoints.cpp
        Xorion/Module/Modules/Waypoints.h
        Xorion/Module/ModuleManager.cpp
        Xorion/Module/ModuleManager.h

        Xorion/Render/RenderGlobals.cpp
        Xorion/Render/RenderGlobals.h
        Xorion/Render/RenderInit.cpp
        Xorion/Render/RenderUtils.cpp
        Xorion/Render/RenderUtils.h
        Xorion/Render/Signatures.cpp
        Xorion/Render/Signatures.h

        Xorion/Scripting/Functions/CommandManagerFunctions.cpp
        Xorion/Scripting/Functions/CommandManagerFunctions.h
        Xorion/Scripting/Functions/DrawFunctions.cpp
        Xorion/Scripting/Functions/DrawFunctions.h
        Xorion/Scripting/Functions/EntityFunctions.cpp
        Xorion/Scripting/Functions/EntityFunctions.h
        Xorion/Scripting/Functions/GameFunctions.cpp
        Xorion/Scripting/Functions/GameFunctions.h
        Xorion/Scripting/Functions/GlobalFunctions.cpp
        Xorion/Scripting/Functions/GlobalFunctions.h
        Xorion/Scripting/Functions/XorionFunctions.cpp
        Xorion/Scripting/Functions/XorionFunctions.h
        Xorion/Scripting/Functions/InventoryFunctions.cpp
        Xorion/Scripting/Functions/InventoryFunctions.h
        Xorion/Scripting/Functions/LevelFunctions.cpp
        Xorion/Scripting/Functions/LevelFunctions.h
        Xorion/Scripting/Functions/LocalPlayerFunctions.cpp
        Xorion/Scripting/Functions/LocalPlayerFunctions.h
        Xorion/Scripting/Functions/ModuleManagerFunctions.cpp
        Xorion/Scripting/Functions/ModuleManagerFunctions.h
        Xorion/Scripting/Functions/Vector2Functions.cpp
        Xorion/Scripting/Functions/Vector2Functions.h
        Xorion/Scripting/Functions/Vector3Functions.cpp
        Xorion/Scripting/Functions/Vector3Functions.h
        Xorion/Scripting/JsScriptModule.cpp
        Xorion/Scripting/JsScriptModule.h
        Xorion/Scripting/ScriptInstance.cpp
        Xorion/Scripting/ScriptInstance.h
        Xorion/Scripting/ScriptManager.cpp
        Xorion/Scripting/ScriptManager.h

        Xorion/DrawUtils.cpp
        Xorion/DrawUtils.h
        Xorion/GuiUtils.cpp
        Xorion/GuiUtils.h
        Xorion/ImmediateGui.cpp
        Xorion/ImmediateGui.h
        Xorion/Loader.cpp
        Xorion/Loader.h

        include/chakra/ChakraCommon.h
        include/chakra/ChakraCommonWindows.h
        include/chakra/ChakraCore.h
        include/chakra/ChakraCoreWindows.h
        include/chakra/ChakraDebug.h
        include/atlrx.h
        include/d3dx11.h
        include/d3dx11async.h
        include/d3dx11core.h
        include/d3dx11effect.h
        include/RegExp.h
        include/StringProcess.h
        include/WinHttpClient.h

        Memory/GameData.cpp
        Memory/GameData.h
        Memory/Hooks.cpp
        Memory/Hooks.h
        Memory/MinHook.h
        Memory/SignatureGlobals.cpp
        Memory/SignatureGlobals.h
        Memory/SlimMem.cpp
        Memory/SlimMem.h

        # SDK (alphabetical, corrected)
        SDK/AABB.h
        SDK/ActorFlags.h
        SDK/Attribute.h
        SDK/BlockLegacy.cpp
        SDK/BlockLegacy.h
        SDK/Camera.cpp
        SDK/Camera.h
        SDK/ChestBlockActor.h
        SDK/ClientInstance.cpp
        SDK/ClientInstance.h
        SDK/ClientInstanceScreenModel.h
        SDK/ComplexInventoryTransaction.cpp
        SDK/ComplexInventoryTransaction.h
        SDK/Components.h
        SDK/Dimension.h
        SDK/DrawUtils.cpp
        SDK/DrawUtils.h
        SDK/Entity.cpp
        SDK/Entity.h
        SDK/EntityContext.h
        SDK/EntityList.h
        SDK/EntityRefs.h
        SDK/Font.cpp
        SDK/Font.h
        SDK/GameMode.cpp
        SDK/GameMode.h
        SDK/GameSettingsInput.h
        SDK/GameType.h
        SDK/HIDController.h
        SDK/HitResult.h
        SDK/XorionNameTag.cpp
        SDK/XorionNameTag.h
        SDK/InitSDK.cpp
        SDK/InitSDK.h
        SDK/Inventory.cpp
        SDK/Inventory.h
        SDK/InventoryTransaction.cpp
        SDK/InventoryTransaction.h
        SDK/Item.cpp
        SDK/Item.h
        SDK/ItemStack.h
        SDK/Level.cpp
        SDK/Level.h
        SDK/LocalPlayer.cpp
        SDK/LocalPlayer.h
        SDK/LoopbackPacketSender.h
        SDK/MC_Color.h
        SDK/MathUtils.h
        SDK/MatrixStack.cpp
        SDK/MatrixStack.h
        SDK/MinecraftUIRenderContext.h
        SDK/MojangsonToken.h
        SDK/MoveInputHandler.h
        SDK/Offsets.cpp
        SDK/Offsets.h
        SDK/Packet.cpp
        SDK/Packet.h
        SDK/Player.cpp
        SDK/Player.h
        SDK/PlayerMovementProxy.h
        SDK/PlayerSignatures.h
        SDK/PlayerSupplies.h
        SDK/RakNetConnector.h
        SDK/RayTracer.cpp
        SDK/RayTracer.h
        SDK/Ref.h
        SDK/ScreenContext.h
        SDK/Tag.cpp
        SDK/Tag.h
        SDK/Tessellator.cpp
        SDK/Tessellator.h
        SDK/TextHolder.h
        SDK/TimerUtil.cpp
        SDK/TimerUtil.h
        SDK/UIScene.h
        SDK/Vec2.h
        SDK/Vec3.h
        SDK/Vec3i.h
        SDK/VersionTag.h
        SDK/Weather.h

        Utils/ChakraHelper.h
        Utils/ClientColors.cpp
        Utils/ClientColors.h
        Utils/DllHelper.h
        Utils/HMath.h
        Utils/Json.hpp
        Utils/Logger.cpp
        Utils/Logger.h
        Utils/SkinUtil.cpp
        Utils/SkinUtil.h
        Utils/Target.cpp
        Utils/Target.h
        Utils/TextFormat.cpp
        Utils/TextFormat.h
        Utils/Utils.cpp
        Utils/Utils.h
        Utils/xorstr.h

        Utils/Keys.h

        resource.h

        Xorion/Module/Modules/AntiImmobile.cpp
        Xorion/Module/Modules/AntiImmobile.h

        Xorion/path/JoeConstants.cpp
        Xorion/path/JoeConstants.h
        Xorion/path/JoeMovementController.cpp
        Xorion/path/JoeMovementController.h
        Xorion/path/JoePath.cpp
        Xorion/path/JoePath.h
        Xorion/path/JoePathFinder.cpp
        Xorion/path/JoePathFinder.h
        Xorion/path/JoeSegment.cpp
        Xorion/path/JoeSegment.h
        Xorion/path/goals/JoeGoal.cpp
        Xorion/path/goals/JoeGoal.h
        Xorion/path/goals/JoeGoalXYZ.cpp
        Xorion/path/goals/JoeGoalXYZ.h
        Xorion/path/goals/JoeGoalXZ.cpp
        Xorion/path/goals/JoeGoalXZ.h
        Xorion/path/goals/JoeGoalY.cpp
        Xorion/path/goals/JoeGoalY.h

        Xorion/Module/Modules/FollowPathModule.cpp
        Xorion/Module/Modules/FollowPathModule.h
        Xorion/Command/Commands/PathCommand.cpp
        Xorion/Command/Commands/PathCommand.h

        "Xorion/Module/Modules/Twerk.cpp"
        "Xorion/Module/Modules/Twerk.h"

        # Added modules
        Xorion/Module/Modules/BedAura.cpp
        Xorion/Module/Modules/BedAura.h
        Xorion/Module/Modules/BedStack.cpp
        Xorion/Module/Modules/BedStack.h
        Xorion/Module/Modules/Replenish.cpp
        Xorion/Module/Modules/Replenish.h
        Xorion/Module/Modules/AutoAnchor.cpp
        Xorion/Module/Modules/AutoAnchor.h
        Xorion/Module/Modules/Unbanner.cpp
        Xorion/Module/Modules/Unbanner.h
        Xorion/Module/Modules/AntiCheatBlocker.cpp
        Xorion/Module/Modules/AntiCheatBlocker.h
        Xorion/Module/Modules/AntiCheatDelete.cpp
        Xorion/Module/Modules/AntiCheatDelete.h
        Xorion/Module/Modules/Impersonator.cpp
        Xorion/Module/Modules/Impersonator.h
        Xorion/Command/Commands/ImpersonateCommand.cpp
        Xorion/Command/Commands/ImpersonateCommand.h
)

# Link required libraries
target_link_libraries(Xorion
    d3d11.lib
    d3dcompiler.lib
    chakrart.lib
)

# --- Shader compile rules (Windows-only) ---
if(WIN32)
    set(SHADER_DIR ${CMAKE_SOURCE_DIR}/Xorion/Shaders)

    # Function to compile a shader
    function(compile_shader SHADER_FILE PROFILE)
        get_filename_component(SHADER_NAME ${SHADER_FILE} NAME_WE)
        set(OUTPUT ${CMAKE_BINARY_DIR}/${SHADER_NAME}.cso)

        add_custom_command(
            OUTPUT ${OUTPUT}
            COMMAND fxc /T ${PROFILE} /E main /Fo ${OUTPUT} ${SHADER_FILE}
            DEPENDS ${SHADER_FILE}
            COMMENT "Compiling ${SHADER_FILE} -> ${OUTPUT}"
        )

        set(COMPILED_SHADERS ${COMPILED_SHADERS} ${OUTPUT} PARENT_SCOPE)
    endfunction()

    # Compile each shader with the right profile
    compile_shader(${SHADER_DIR}/UnlitTintPS.hlsl ps_5_0)
    compile_shader(${SHADER_DIR}/UnlitTintVS.hlsl vs_5_0)

    # Group them into a target
    add_custom_target(Shaders ALL DEPENDS ${COMPILED_SHADERS})

    # Make Xorion depend on shaders
    add_dependencies(Xorion Shaders)
endif()